--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons-animated": "^1.0.2",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
